--- a/src/stylesheets/partials/_footer.sass
+++ b/src/stylesheets/partials/_footer.sass
@@ -33,6 +33,9 @@
 p.footerContact
   display: block
 
+.languageText
+  margin: 10px 0 10px 0
+
 .languageContainer
   display: inline-block
   float: right
